# connectwise-mcp

./: .env.example  Dockerfile  README.md  pyproject.toml  tenants.example.json
.do/: app.yaml
.github/workflows/: ci.yml
docs/: DEPLOY.md
docs/superpowers/plans/: 2026-06-10-hosting-hardening.md  2026-06-10-onboarding-wizard.md  2026-06-10-write-actions.md
docs/superpowers/specs/: 2026-06-10-hosting-hardening-design.md  2026-06-10-onboarding-wizard-design.md  2026-06-10-write-actions-design.md
scripts/: generate_catalog.py  live_smoke.ps1  live_smoke.py
src/connectwise_mcp/: auth.py  catalog.py  curated.py  curated_writes.py  executor.py  onboarding.py  server.py  writer.py
src/connectwise_mcp/data/: openapi_get_filtered.json
tests/: test_auth.py  test_executor.py  test_onboarding.py  test_tools.py  test_write_tools.py  test_writer.py
