[project]
name = "connectwise-mcp"
version = "0.1.0"
description = "MCP gateway for ConnectWise Manage (PSA): catalog-wide reads plus five curated create actions"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "fastmcp>=2.3.0",
    "httpx>=0.27",
]

[project.optional-dependencies]
dev = ["pytest>=8", "pytest-asyncio>=0.23"]

[project.scripts]
connectwise-mcp = "connectwise_mcp.server:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

# data/ (the bundled OpenAPI catalog) sits inside the package directory, so
# hatchling includes it automatically — do not force-include it again (a
# duplicate archive entry fails the wheel build on non-editable installs).
[tool.hatch.build.targets.wheel]
packages = ["src/connectwise_mcp"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
